# api2spec-fixture-flask

./: .gitignore  README.md  api2spec.yaml  openapi.yaml  pyproject.toml  run.py
.claude/agents/: senior-flask-dev.md
app/: __init__.py
app/routes/: __init__.py  brews.py  health.py  teapots.py  teas.py
app/schemas/: __init__.py  brew.py  common.py  steep.py  tea.py  teapot.py
app/store/: __init__.py  memory.py
docs/: SPEC.md
tests/: conftest.py  test_brews.py  test_health.py  test_teapots.py  test_teas.py
